# love-docs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cog.toml
.github/workflows/: lint.yml  release.yml
core/: Cargo.toml
core/src/: lib.rs
src/: main.rs
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
