[package]
name = "love-docs"
version.workspace = true
edition.workspace = true

[workspace]
members = [
    ".",
    "core",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
rstest = "0.26.1"

[lints]
workspace = true

[dependencies]

[dev-dependencies]
rstest.workspace = true
